# generative

./: .clang-format  .clangd  .env  .gitignore  .gitmodules  .lvimrc  .vimspector.json  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  README.md  README.md.in  README.md.out  build.rs  pyproject.toml  pytest.ini  regen-examples.sh  requirements.txt  setup.py
.github/workflows/: check.yml  format.yml  lint.yml  tests.yml
examples/: asemic.sh  bundle.sh  fractal-plant-1-pca.wkt  fractal-plant-1.json  fractal-plant-1.tgf  fractal-plant-1.wkt  fractal-plant-3d.json  generate-examples.sh  maya-tree-2.flat  maya-tree-2.json  maya-tree-2.tgf  maya-tree-2.wkb  maya-tree-2.wkt  maya-tree.json  point-cloud.sh  project-examples.sh  random-lsystem.sh  sierpinski-tree.json  streamline.sh  test-03.wkt  test-04.wkt  unit-cube.wkt  unit-square.wkt
examples/asemic/: generate.sh
examples/attractor/: clifford.rn  fractal-dreams-ssss.rn  generate.sh  gumowski-mira.rn  ikeda.rn  johnny-svensson.rn  peter-de-jong.rn  tinkerbell.rn
examples/bitwise/: generate.sh
examples/dla/: generate.sh
examples/geom2graph/: generate.sh
examples/grid/: generate.sh
examples/lsystems/: generate.sh  random-lsystem.webm  sierpinski-tree.json
examples/pack/: generate.sh
examples/project/: generate.sh
examples/random-lsystems/: generate.sh  saved.json
examples/smooth/: generate.sh
examples/snap/: generate.sh
examples/streamline/: generate.sh
examples/transform/: generate.sh
examples/traverse/: generate.sh
examples/urquhart/: generate.sh
examples/wkt2svg/: generate.sh
generative/: CMakeLists.txt  attractor.rs  dla.rs  flatten.py  geometry-flattener.cpp  geometry_mut_map.rs  graph.rs  lib.rs  projection.py  snap.rs  stdio.rs  triangulation.rs  wkio.py  wkio.rs
generative/cpp/: CMakeLists.txt  README.md
generative/cpp/src/: bindings.cpp
generative/cxxbridge/: coord_ffi.rs  geometry_collection.hpp  geometry_collection.rs  geometry_collection_ffi.rs  geometry_graph.hpp  geometry_graph_ffi.rs  mod.rs  noder.hpp  noder_ffi.rs
generative/flatten/: __init__.py  flatten.py  geometries.rs  mod.rs  points.rs
generative/include/generative/: geometry-flattener.h
generative/include/generative/io/: graph-reader.h  graph-writer.h  tgf-graph-reader.h  tgf-graph-writer.h  wkt-stream-reader.h  wkt.h
generative/include/generative/noding/: geometry-graph.h  geometry-noder.h
generative/io/: __init__.py  mod.rs  stdio.rs  tgf-graph-reader.cpp  tgf-graph-writer.cpp  tgf.rs  wkt-stream-reader.cpp  wkt.cpp  wkt.rs
generative/lsystem/: grammar.py  interpreter.py  production.py  turtle.py
generative/misc/: fogleworms.py
generative/noding/: geometry-graph.cpp  geometry-noder.cpp  mod.rs
generative/rust/: Cargo.toml  README.md
generative/rust/src/: bindings.rs  lib.rs
generative/rust/src/dla/: mod.rs  model.rs
generative/rust/src/io/: graph.rs
lsystem/: __init__.py  grammar.py  interpreter.py  projection.py  rule_grammar.py  rule_parser.py  turtle.py  wkio.py
lsystem/graphics/: __init__.py  graphics.py  pygletgraphics.py  svggraphics.py
lsystem/tests/: test_grammar.py  test_interpreter.py  test_point_conversion.py  test_projection.py  test_rule_parsing.py  test_turtle.py  test_wkio.py
tests/: CMakeLists.txt  geometry-flattener-tests.cpp  geometry-graph-tests.cpp  geometry-noder-tests.cpp  mod.rs  polygonizer-tests.cpp  test_attractor.rs  test_bundle.rs  test_cpp.py  test_flatten.py  test_fogleworms.py  test_geom2graph.rs  test_grammar.py  test_grid.rs  test_interpreter.py  test_pack.rs  test_production.py  test_projection.py  test_rust.py  test_smooth.rs  test_snap.rs  test_transform.rs  test_triangulate.rs  test_turtle.py  test_wkio.py  test_wkt2svg.rs  tgf-graph-reader-tests.cpp  wkt-reader-tests.cpp
tools/: CMakeLists.txt  README.md  attractor.rs  bitwise.rs  bundle.rs  dla.md  dla.rs  fogleworms.rs  format.py  geom2graph.cpp  geom2graph.md  geom2graph.rs  grid.rs  interpret-lstring.py  interpret.py  interpreter.py  pack.rs  parse.py  parser.py  point-cloud.rs  project.py  random-lsystem.sh  random-production-rules.py  render.py  rescale.py  smooth.rs  snap.rs  streamline.rs  template.rs  transform.rs  traverse.rs  triangulate.rs  urquhart.rs  wkt2svg.py  wkt2svg.rs
tools/dla/: Cargo.toml  README.md  cmdline.rs  main.rs
tools/dla/src/: cmdline.rs  dla.rs  main.rs  wkio.rs
tools/geom2graph/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  README.md
tools/geom2graph/cmake/: compiler-warnings.cmake  doxygen.cmake  third-party-target-link-libraries.cmake
tools/geom2graph/examples/: test-01.wkt  test-02.wkt
tools/geom2graph/include/geom2graph/: foo.h  geometry-flattener.h  wkt-reader.h
tools/geom2graph/include/geom2graph/io/: graph-reader.h  graph-writer.h  tgf-graph-reader.h  tgf-graph-writer.h  wkt-stream-reader.h  wkt.h
tools/geom2graph/include/geom2graph/noding/: geometry-graph.h  geometry-noder.h
tools/geom2graph/src/: CMakeLists.txt  cmdline.cpp  cmdline.h  cmdline.rs  csiter.rs  deepflatten.rs  geomflattener.rs  main.cpp  main.rs  wkio.rs
tools/geom2graph/src/geom2graph/: foo.cpp  geometry-flattener.cpp  wkt-reader.cpp
tools/geom2graph/src/geom2graph/io/: tgf-graph-reader.cpp  tgf-graph-writer.cpp  wkt-stream-reader.cpp  wkt.cpp
tools/geom2graph/src/geom2graph/noding/: geometry-graph.cpp  geometry-noder.cpp
tools/geom2graph/tests/: CMakeLists.txt  foo.cpp  geometry-flattener-tests.cpp  geometry-graph-tests.cpp  geometry-noder-tests.cpp  main.cpp  polygonizer-tests.cpp  sfcgal-tests.cpp  tgf-graph-reader-tests.cpp  wkt-reader-tests.cpp
tools/point-cloud/: cmdline.rs  main.rs
tools/transform/: cmdline.rs  main.rs
tools/triangulate/: cmdline.rs  main.rs
tools/urquhart/: cmdline.rs  main.rs
