[package]
name = "generative"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[lib]
path = "generative/lib.rs"

[[bin]]
name = "dla"
path = "tools/dla.rs"

[[bin]]
name = "point-cloud"
path = "tools/point-cloud.rs"

[[bin]]
name = "transform"
path = "tools/transform.rs"

[[bin]]
name = "triangulate"
path = "tools/triangulate.rs"

[[bin]]
name = "urquhart"
path = "tools/urquhart.rs"

[[bin]]
name = "template"
path = "tools/template.rs"

[[bin]]
name = "wkt2svg"
path = "tools/wkt2svg.rs"

[[bin]]
name = "traverse"
path = "tools/traverse.rs"

[[bin]]
name = "smooth"
path = "tools/smooth.rs"

[[bin]]
name = "grid"
path = "tools/grid.rs"

[[bin]]
name = "bitwise"
path = "tools/bitwise.rs"

[[bin]]
name = "bundle"
path = "tools/bundle.rs"

[[bin]]
name = "pack"
path = "tools/pack.rs"

[[bin]]
name = "streamline"
path = "tools/streamline.rs"

[[bin]]
name = "snap"
path = "tools/snap.rs"

[[bin]]
name = "geom2graph"
path = "tools/geom2graph.rs"
required-features = ["cxx-bindings"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6.5"
cxx = { version = "1.0", optional = true }
delaunator = "1.0"
eyre = "0.6.12"
geo = "0.31"
itertools = "0.14"
kdtree = "0.7"
noise = "0.9"
petgraph = "0.8"
rand = "0.9"
rand_distr = "0.5"
rectangle-pack = "0.4"
rune = "0.14"
svg = "0.18"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
wkt = "0.14"

[build-dependencies]
cc = { version = "*", features = ["parallel"], optional = true }
cmake = { version = "0.1", optional = true }
cxx-build = { version = "1.0", optional = true }
fs_extra = { version = "1.3", optional = true }
glob = { version = "0.3", optional = true }

[dev-dependencies]
ctor = "0.6"
float-cmp = "0.10"

[features]
# Tests can dump WKT for ease of visualization
#     cargo test --all-features $test_name -- --nocapture | ./tools/render.py
test-io = []
# Whether to also build the C++ libgenerative
cxx = ["dep:cmake", "dep:cc", "dep:fs_extra", "dep:glob"]
# Whether to also build the C++ libgenerative tests
cxx-tests = ["cxx"]
# Whether to build the Rust bindings for libgenerative (geom2graph)
cxx-bindings = ["cxx", "dep:cxx", "dep:cxx-build"]

default = ["cxx-bindings"]

[patch.crates-io]
# Unreleased changes add support for Trig functions
#
# Unfortunately 0.14.1 was a hotfix branch, and master is still 0.14.0 with breaking API changes
# since 0.14.0 was released.
rune = { git = "https://github.com/rune-rs/rune.git", branch = "main" }
