[package]
name = "generative"
version = "0.1.0"
edition = "2018"
description = "Generative/computational art, implemented in Rust."
authors = ["Austin Gill <Notgnoshi@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
kdtree = "0.6"
petgraph = "0.5"
rand = "0.8"
# TODO: What's needed for the library vs application?
log = "0.4"
stderrlog = "0.5"
structopt = "0.3"

[dependencies.pyo3]
version = "0.14"
features = ["extension-module"]
