[package]
name = "geom2graph"
version = "0.1.0"
authors = ["Austin Gill <Notgnoshi@gmail.com>"]
edition = "2018"
description = "A CLI application to convert geometries into a graph data structure"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kdtree = "0.6"
log = "0.4"
petgraph = "0.5"
stderrlog = "0.5"
structopt = "0.3"

[dependencies.geos]
version = "7.0"
features = ["v3_8_0"]
